Add fade effect to sidebar boxes

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <div class="checkbox"><label><input type="checkbox" ng-model="showDescription">Show artwork description</label></div>
           </div>
           -->
-          <div class="box">
+          <div class="box animated fadeIn">
             <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>          
             <h4>Controls</h4>
             Use <kbd class="light">&larr;</kbd> and <kbd class="light">&rarr;</kbd> to move between artworks.
             <p>
             Press <kbd class="light">Space</kbd> to toggle the description.
             </div>
-          <div class="box">
+          <div class="box animated fadeIn">
             <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>          
             <h4>About</h4>
             This site was built by <b>Allen Guo</b> using jQuery, Bootstrap, AngularJS, KEYS.css, and Animate.css.
