Fix GitHub link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h4>About</h4>
             This site was built by <b>Allen Guo</b> using jQuery, Bootstrap, AngularJS, KEYS.css, and Animate.css.
             <p>
-            Get the source code at <a href="" target="_blank">GitHub</a>.
+            Get the source code at <a href="https://github.com/guoguo12/art-flashcards" target="_blank">GitHub</a>.
           </div>          
         </div>
       </div>
