Make image loading smoother

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 id="picture-title">{{ title }}</h1>
             <h2>{{ artistDate }}</h2>
           </div>
-          <img id="picture" class="animated fadeIn" ng-src="{{ imageUrl }}"></img>
+          <img id="picture" class="animated fadeIn" ng-src="{{ imageUrl }}" placeholder-on-load></img>
         </div>
         <div id="sidebar" class="col-md-4">
           <!--
