Simplify image loading behavior in directive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <h1 id="picture-title">{{ title }}</h1>
             <h2>{{ artistDate }}</h2>
           </div>
-          <img id="picture" class="animated fadeIn" ng-src="{{ imageUrl }}" placeholder-on-load></img>
+          <!-- <img id="picture" class="animated fadeIn" ng-src="{{ imageUrl }}" placeholder-on-load></img> -->
+          <div id="picture-container" picture-placeholder></div>
         </div>
         <div id="sidebar" class="col-md-4">
           <!--
