--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           -->
           <div class="box animated fadeIn">
-            <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>          
+            <span class="glyphicon glyphicon-equalizer" aria-hidden="true"></span>          
             <h4>Progress</h4>
             <div class="progress">
               <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" style="width: 0%" progress-bar>
@@ -69,7 +69,7 @@
             Press <kbd class="light">Space</kbd> to toggle the description.
           </div>
           <div class="box animated fadeIn">
-            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>          
+            <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>          
             <h4>About</h4>
             This site was built by <b>Allen Guo</b> using jQuery, Bootstrap, AngularJS, KEYS.css, and Animate.css.
             <p>
@@ -82,5 +82,13 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/app.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-43676088-2', 'auto');
+      ga('send', 'pageview');
+    </script>    
   </body>
 </html>
