--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         display: none !important;
       }
     </style>    
+    <link rel="icon" href="images/favicon.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/keys.css" rel="stylesheet">
