--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             This is artwork <b>{{ index + 1 }}</b> of <b>{{ artworks.length }}</b> from the set <b>{{ setName }}</b>.
           </div>          
           <div class="box animated fadeIn">
-            <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
             <h4>Sets</h4>
             <!--
             <div class="row">
