Reorder list of tools used by significance

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="box animated fadeIn">
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>          
             <h4>About</h4>
-            This site was built by <b>Allen Guo</b> using jQuery, Bootstrap, AngularJS, KEYS.css, and Animate.css.
+            This site was built by <b>Allen Guo</b> using AngularJS, Bootstrap, Animate.css, KEYS.css, and jQuery.
             <p>
             Get the source code at <a href="https://github.com/guoguo12/art-flashcards" target="_blank" onclick="_gaq.push(['_trackEvent', 'Links', 'Click', 'GitHub']);">GitHub</a>.
           </div>          
