--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Choose the set you would like to switch to:
             <ul>
               <li ng-repeat="set in setNames">
-              <a href="#{{ sets[set] }}" ng-click="updateSet(set)">{{ set }}</a>
+              <a href="#" ng-click="updateSet(set)">{{ set }}</a>
               <span ng-show="set == setName">(current set)</span>
               </li>
             </ul>
